--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -1953,7 +1953,7 @@
    "source": [
     "best_k = ks[int(np.argmax(silScores))]\n",
     "print(f'Best k= {best_k}')\n",
-    "kmeans = KMeans(n_clusters=best_k, random_state=42, n_init=10) # NEED TO SET RANDOM STATE FOR ANALYSIS BELOW (made this mistake once already)\n",
+    "kmeans = KMeans(n_clusters=best_k, random_state=42, n_init=10) # NEED TO SET RANDOM STATE FOR ANALYSIS BELOW\n",
     "df_final['kmeans_cluster'] = kmeans.fit_predict(X_used)\n",
     "\n",
     "# PCA visualization of clusters\n",
