--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,14 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape after preprocessing: (37438, 14)\n"
+      "description    7257\n",
+      "location          4\n",
+      "screen_name       0\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -72,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final shape: (37438, 24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "drop_cols = ['profile_background_image_url', 'profile_image_url', 'created_at']\n",
     "df = df.drop(columns=drop_cols)\n"
@@ -90,65 +85,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import TruncatedSVD\n",
-    "\n",
-    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
-    "tfidf_mat = tfidf.fit_transform(df['description'])\n",
-    "\n",
-    "num_topic = 10\n",
-    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
-    "svd_matrix = svd.fit_transform(tfidf_mat)\n",
-    "\n",
-    "svd_df = pd.DataFrame(\n",
-    "    svd_matrix, \n",
-    "    columns=[f\"topic_{i}\" for i in range(num_topic)]\n",
-    ")\n",
-    "\n",
-    "df_final = pd.concat([df.reset_index(drop=True), svd_df.reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "print(f\"Added {num_topic} text component features.\")\n",
-    "print(df_final.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features shape: (37438, 21)\n",
-      "Target distribution: human    25013\n",
-      "bot      12425\n",
-      "Name: count, dtype: int64\n",
-      "Encoded labels: ['bot' 'human']\n"
+      "Train shape: (29950, 17)\n",
+      "Test shape: (7488, 17)\n"
      ]
     }
    ],
    "source": [
     "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
-    "feature_cols = [col for col in df_final.columns if col not in exclude_cols]\n",
+    "feature_cols = [col for col in df.columns if col not in exclude_cols]\n",
     "\n",
-    "X = df_final[feature_cols].select_dtypes(include=[np.number]).values\n",
-    "y = df_final['account_type'].values\n",
+    "X_numerical = df[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "y = df['account_type'].values\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y_encoded = label_encoder.fit_transform(y)\n",
     "\n",
-    "print(f\"Features shape: {X.shape}\")\n",
-    "print(f\"Target distribution: {pd.Series(y).value_counts()}\")\n",
+    "X_train_full, X_test_full, y_train, y_test = train_test_split(\n",
+    "    df, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded\n",
+    ")\n",
+    "\n",
+    "print(f\"Train shape: {X_train_full.shape}\")\n",
+    "print(f\"Test shape: {X_test_full.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train features shape: (29950, 21)\n",
+      "Test features shape: (7488, 21)\n",
+      "Encoded labels: ['bot' 'human']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "\n",
+    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
+    "tfidf_train = tfidf.fit_transform(X_train_full['description'])\n",
+    "tfidf_test = tfidf.transform(X_test_full['description'])\n",
+    "\n",
+    "num_topic = 10\n",
+    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
+    "svd_train = svd.fit_transform(tfidf_train)\n",
+    "svd_test = svd.transform(tfidf_test)\n",
+    "\n",
+    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
+    "feature_cols = [col for col in X_train_full.columns if col not in exclude_cols]\n",
+    "\n",
+    "X_train_numerical = X_train_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "X_test_numerical = X_test_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "\n",
+    "X_train = np.hstack([X_train_numerical, svd_train])\n",
+    "X_test = np.hstack([X_test_numerical, svd_test])\n",
+    "\n",
+    "print(f\"Train features shape: {X_train.shape}\")\n",
+    "print(f\"Test features shape: {X_test.shape}\")\n",
     "print(f\"Encoded labels: {label_encoder.classes_}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,99 +172,100 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded)\n",
-    "\n",
-    "print(f\"Train shape: {X_train.shape}\")\n",
-    "print(f\"Test shape: {X_test.shape}\")\n"
+    "print(f\"Train shape: {X_train_scaled.shape}\")\n",
+    "print(f\"Test shape: {X_test_scaled.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 0.51739615\n",
-      "Validation score: 0.790985\n",
-      "Iteration 2, loss = 0.44575187\n",
-      "Validation score: 0.791653\n",
-      "Iteration 3, loss = 0.43201902\n",
-      "Validation score: 0.794992\n",
-      "Iteration 4, loss = 0.42718432\n",
-      "Validation score: 0.790317\n",
-      "Iteration 5, loss = 0.42113917\n",
-      "Validation score: 0.792321\n",
-      "Iteration 6, loss = 0.41976982\n",
-      "Validation score: 0.783639\n",
-      "Iteration 7, loss = 0.41756921\n",
-      "Validation score: 0.790985\n",
-      "Iteration 8, loss = 0.41485565\n",
-      "Validation score: 0.792321\n",
-      "Iteration 9, loss = 0.41173333\n",
-      "Validation score: 0.799666\n",
-      "Iteration 10, loss = 0.41178816\n",
+      "Iteration 1, loss = 0.51789696\n",
+      "Validation score: 0.789983\n",
+      "Iteration 2, loss = 0.44528470\n",
+      "Validation score: 0.788648\n",
+      "Iteration 3, loss = 0.43150823\n",
       "Validation score: 0.793322\n",
-      "Iteration 11, loss = 0.40909501\n",
+      "Iteration 4, loss = 0.42710561\n",
+      "Validation score: 0.794324\n",
+      "Iteration 5, loss = 0.42094181\n",
+      "Validation score: 0.790317\n",
+      "Iteration 6, loss = 0.42015931\n",
+      "Validation score: 0.783639\n",
+      "Iteration 7, loss = 0.41808636\n",
+      "Validation score: 0.793656\n",
+      "Iteration 8, loss = 0.41557892\n",
+      "Validation score: 0.793990\n",
+      "Iteration 9, loss = 0.41234132\n",
+      "Validation score: 0.798664\n",
+      "Iteration 10, loss = 0.41247504\n",
+      "Validation score: 0.794324\n",
+      "Iteration 11, loss = 0.40967053\n",
       "Validation score: 0.796995\n",
-      "Iteration 12, loss = 0.40762223\n",
-      "Validation score: 0.788314\n",
-      "Iteration 13, loss = 0.40535187\n",
-      "Validation score: 0.797329\n",
-      "Iteration 14, loss = 0.40605819\n",
-      "Validation score: 0.800000\n",
-      "Iteration 15, loss = 0.40449964\n",
-      "Validation score: 0.799666\n",
-      "Iteration 16, loss = 0.40212353\n",
-      "Validation score: 0.798331\n",
-      "Iteration 17, loss = 0.40162846\n",
-      "Validation score: 0.801669\n",
-      "Iteration 18, loss = 0.40092186\n",
-      "Validation score: 0.799332\n",
-      "Iteration 19, loss = 0.39956519\n",
-      "Validation score: 0.795326\n",
-      "Iteration 20, loss = 0.39821254\n",
-      "Validation score: 0.798331\n",
-      "Iteration 21, loss = 0.39590014\n",
-      "Validation score: 0.804341\n",
-      "Iteration 22, loss = 0.39730699\n",
-      "Validation score: 0.801002\n",
-      "Iteration 23, loss = 0.39434956\n",
-      "Validation score: 0.805342\n",
-      "Iteration 24, loss = 0.39307312\n",
-      "Validation score: 0.801002\n",
-      "Iteration 25, loss = 0.39388034\n",
-      "Validation score: 0.803673\n",
-      "Iteration 26, loss = 0.39048700\n",
-      "Validation score: 0.796661\n",
-      "Iteration 27, loss = 0.39064029\n",
-      "Validation score: 0.806678\n",
-      "Iteration 28, loss = 0.38872928\n",
-      "Validation score: 0.797663\n",
-      "Iteration 29, loss = 0.38933438\n",
-      "Validation score: 0.805676\n",
-      "Iteration 30, loss = 0.38769056\n",
-      "Validation score: 0.806678\n",
-      "Iteration 31, loss = 0.38653698\n",
+      "Iteration 12, loss = 0.40813781\n",
+      "Validation score: 0.785643\n",
+      "Iteration 13, loss = 0.40645203\n",
       "Validation score: 0.796327\n",
-      "Iteration 32, loss = 0.38576232\n",
-      "Validation score: 0.806344\n",
-      "Iteration 33, loss = 0.38448208\n",
+      "Iteration 14, loss = 0.40690565\n",
       "Validation score: 0.801002\n",
-      "Iteration 34, loss = 0.38127801\n",
-      "Validation score: 0.799332\n",
-      "Iteration 35, loss = 0.38188229\n",
-      "Validation score: 0.803005\n",
-      "Iteration 36, loss = 0.37951816\n",
+      "Iteration 15, loss = 0.40532690\n",
+      "Validation score: 0.800334\n",
+      "Iteration 16, loss = 0.40342363\n",
+      "Validation score: 0.797329\n",
+      "Iteration 17, loss = 0.40316445\n",
+      "Validation score: 0.800668\n",
+      "Iteration 18, loss = 0.40220370\n",
+      "Validation score: 0.790985\n",
+      "Iteration 19, loss = 0.40044891\n",
+      "Validation score: 0.787646\n",
+      "Iteration 20, loss = 0.39962898\n",
+      "Validation score: 0.802003\n",
+      "Iteration 21, loss = 0.39788979\n",
+      "Validation score: 0.801002\n",
+      "Iteration 22, loss = 0.39809601\n",
+      "Validation score: 0.800668\n",
+      "Iteration 23, loss = 0.39628103\n",
       "Validation score: 0.801669\n",
-      "Iteration 37, loss = 0.37994829\n",
-      "Validation score: 0.803673\n",
-      "Iteration 38, loss = 0.37673636\n",
-      "Validation score: 0.803673\n",
+      "Iteration 24, loss = 0.39540767\n",
+      "Validation score: 0.783639\n",
+      "Iteration 25, loss = 0.39476588\n",
+      "Validation score: 0.800334\n",
+      "Iteration 26, loss = 0.39310065\n",
+      "Validation score: 0.795326\n",
+      "Iteration 27, loss = 0.39382461\n",
+      "Validation score: 0.801002\n",
+      "Iteration 28, loss = 0.39216478\n",
+      "Validation score: 0.803005\n",
+      "Iteration 29, loss = 0.39212114\n",
+      "Validation score: 0.798331\n",
+      "Iteration 30, loss = 0.39070958\n",
+      "Validation score: 0.802003\n",
+      "Iteration 31, loss = 0.38908470\n",
+      "Validation score: 0.799332\n",
+      "Iteration 32, loss = 0.38863155\n",
+      "Validation score: 0.790317\n",
+      "Iteration 33, loss = 0.38785746\n",
+      "Validation score: 0.799332\n",
+      "Iteration 34, loss = 0.38499054\n",
+      "Validation score: 0.795659\n",
+      "Iteration 35, loss = 0.38523366\n",
+      "Validation score: 0.794658\n",
+      "Iteration 36, loss = 0.38380578\n",
+      "Validation score: 0.799332\n",
+      "Iteration 37, loss = 0.38351497\n",
+      "Validation score: 0.798664\n",
+      "Iteration 38, loss = 0.38111843\n",
+      "Validation score: 0.798664\n",
+      "Iteration 39, loss = 0.38136816\n",
+      "Validation score: 0.800334\n",
       "Validation score did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n",
       "Training complete.\n"
      ]
@@ -273,27 +284,27 @@
     "    verbose=True\n",
     ")\n",
     "\n",
-    "nn.fit(X_train, y_train)\n",
+    "nn.fit(X_train_scaled, y_train)\n",
     "print(\"Training complete.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8141\n",
-      "Test Accuracy: 0.8030\n",
+      "Train Accuracy: 0.8100\n",
+      "Test Accuracy: 0.8010\n",
       "\n",
       "Classification Report (Test):\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         bot       0.70      0.72      0.71      2485\n",
-      "       human       0.86      0.84      0.85      5003\n",
+      "         bot       0.70      0.71      0.70      2485\n",
+      "       human       0.85      0.85      0.85      5003\n",
       "\n",
       "    accuracy                           0.80      7488\n",
       "   macro avg       0.78      0.78      0.78      7488\n",
@@ -301,14 +312,14 @@
       "\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1787  698]\n",
-      " [ 777 4226]]\n"
+      "[[1761  724]\n",
+      " [ 766 4237]]\n"
      ]
     }
    ],
    "source": [
-    "y_train_pred = nn.predict(X_train)\n",
-    "y_test_pred = nn.predict(X_test)\n",
+    "y_train_pred = nn.predict(X_train_scaled)\n",
+    "y_test_pred = nn.predict(X_test_scaled)\n",
     "\n",
     "train_acc = accuracy_score(y_train, y_train_pred)\n",
     "test_acc = accuracy_score(y_test, y_test_pred)\n",
@@ -338,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
