--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -98,29 +98,26 @@
     }
    ],
    "source": [
-    "from sklearn.decomposition import TruncatedSVD\n",
+    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
+    "feature_cols = [col for col in df.columns if col not in exclude_cols]\n",
     "\n",
-    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
-    "tfidf_mat = tfidf.fit_transform(df['description'])\n",
+    "X_numerical = df[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "y = df['account_type'].values\n",
     "\n",
-    "num_topic = 10\n",
-    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
-    "svd_matrix = svd.fit_transform(tfidf_mat)\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
     "\n",
-    "svd_df = pd.DataFrame(\n",
-    "    svd_matrix, \n",
-    "    columns=[f\"topic_{i}\" for i in range(num_topic)]\n",
+    "X_train_full, X_test_full, y_train, y_test = train_test_split(\n",
+    "    df, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded\n",
     ")\n",
     "\n",
-    "df_final = pd.concat([df.reset_index(drop=True), svd_df.reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "print(f\"Added {num_topic} text component features.\")\n",
-    "print(df_final.shape)\n"
+    "print(f\"Train shape: {X_train_full.shape}\")\n",
+    "print(f\"Test shape: {X_test_full.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,23 +133,34 @@
     }
    ],
    "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "\n",
+    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
+    "tfidf_train = tfidf.fit_transform(X_train_full['description'])\n",
+    "tfidf_test = tfidf.transform(X_test_full['description'])\n",
+    "\n",
+    "num_topic = 10\n",
+    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
+    "svd_train = svd.fit_transform(tfidf_train)\n",
+    "svd_test = svd.transform(tfidf_test)\n",
+    "\n",
     "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
-    "feature_cols = [col for col in df_final.columns if col not in exclude_cols]\n",
+    "feature_cols = [col for col in X_train_full.columns if col not in exclude_cols]\n",
     "\n",
-    "X = df_final[feature_cols].select_dtypes(include=[np.number]).values\n",
-    "y = df_final['account_type'].values\n",
+    "X_train_numerical = X_train_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "X_test_numerical = X_test_full[feature_cols].select_dtypes(include=[np.number]).values\n",
     "\n",
-    "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)\n",
+    "X_train = np.hstack([X_train_numerical, svd_train])\n",
+    "X_test = np.hstack([X_test_numerical, svd_test])\n",
     "\n",
-    "print(f\"Features shape: {X.shape}\")\n",
-    "print(f\"Target distribution: {pd.Series(y).value_counts()}\")\n",
+    "print(f\"Train features shape: {X_train.shape}\")\n",
+    "print(f\"Test features shape: {X_test.shape}\")\n",
     "print(f\"Encoded labels: {label_encoder.classes_}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -166,17 +174,16 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded)\n",
-    "\n",
-    "print(f\"Train shape: {X_train.shape}\")\n",
-    "print(f\"Test shape: {X_test.shape}\")\n"
+    "print(f\"Train shape: {X_train_scaled.shape}\")\n",
+    "print(f\"Test shape: {X_test_scaled.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +197,13 @@
    "source": [
     "lr = LogisticRegression(penalty='l2', C=1.0, solver='liblinear')\n",
     "\n",
-    "lr.fit(X_train, y_train)\n",
+    "lr.fit(X_train_scaled, y_train)\n",
     "print(\"Training complete.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,8 +231,8 @@
     }
    ],
    "source": [
-    "y_train_pred = lr.predict(X_train)\n",
-    "y_test_pred = lr.predict(X_test)\n",
+    "y_train_pred = lr.predict(X_train_scaled)\n",
+    "y_test_pred = lr.predict(X_test_scaled)\n",
     "\n",
     "train_acc = accuracy_score(y_train, y_train_pred)\n",
     "test_acc = accuracy_score(y_test, y_test_pred)\n",
