--- a/neural_network_advanced.ipynb
+++ b/neural_network_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -78,79 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "drop_cols = ['profile_background_image_url', 'profile_image_url', 'created_at']\n",
     "df = df.drop(columns=drop_cols)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added 10 text component features.\n",
-      "(37438, 27)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.decomposition import TruncatedSVD\n",
-    "\n",
-    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
-    "tfidf_mat = tfidf.fit_transform(df['description'])\n",
-    "\n",
-    "num_topic = 10\n",
-    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
-    "svd_matrix = svd.fit_transform(tfidf_mat)\n",
-    "\n",
-    "svd_df = pd.DataFrame(\n",
-    "    svd_matrix, \n",
-    "    columns=[f\"topic_{i}\" for i in range(num_topic)]\n",
-    ")\n",
-    "\n",
-    "df_final = pd.concat([df.reset_index(drop=True), svd_df.reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "print(f\"Added {num_topic} text component features.\")\n",
-    "print(df_final.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features shape: (37438, 21)\n",
-      "Target distribution: human    25013\n",
-      "bot      12425\n",
-      "Name: count, dtype: int64\n",
-      "Encoded labels: ['bot' 'human']\n"
-     ]
-    }
-   ],
-   "source": [
-    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
-    "feature_cols = [col for col in df_final.columns if col not in exclude_cols]\n",
-    "\n",
-    "X = df_final[feature_cols].select_dtypes(include=[np.number]).values\n",
-    "y = df_final['account_type'].values\n",
-    "\n",
-    "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)\n",
-    "\n",
-    "print(f\"Features shape: {X.shape}\")\n",
-    "print(f\"Target distribution: {pd.Series(y).value_counts()}\")\n",
-    "print(f\"Encoded labels: {label_encoder.classes_}\")\n"
    ]
   },
   {
@@ -162,24 +95,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train shape: (29950, 21)\n",
+      "Train shape: (29950, 17)\n",
+      "Test shape: (7488, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
+    "feature_cols = [col for col in df.columns if col not in exclude_cols]\n",
+    "\n",
+    "X_numerical = df[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "y = df['account_type'].values\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "X_train_full, X_test_full, y_train_full, y_test = train_test_split(\n",
+    "    df, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded\n",
+    ")\n",
+    "\n",
+    "print(f\"Train shape: {X_train_full.shape}\")\n",
+    "print(f\"Test shape: {X_test_full.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train features shape: (29950, 21)\n",
+      "Test features shape: (7488, 21)\n",
+      "Encoded labels: ['bot' 'human']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "\n",
+    "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
+    "tfidf_train_full = tfidf.fit_transform(X_train_full['description'])\n",
+    "tfidf_test = tfidf.transform(X_test_full['description'])\n",
+    "\n",
+    "num_topic = 10\n",
+    "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
+    "svd_train_full = svd.fit_transform(tfidf_train_full)\n",
+    "svd_test = svd.transform(tfidf_test)\n",
+    "\n",
+    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
+    "feature_cols = [col for col in X_train_full.columns if col not in exclude_cols]\n",
+    "\n",
+    "X_train_full_numerical = X_train_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "X_test_numerical = X_test_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "\n",
+    "X_train_full_combined = np.hstack([X_train_full_numerical, svd_train_full])\n",
+    "X_test_combined = np.hstack([X_test_numerical, svd_test])\n",
+    "\n",
+    "print(f\"Train features shape: {X_train_full_combined.shape}\")\n",
+    "print(f\"Test features shape: {X_test_combined.shape}\")\n",
+    "print(f\"Encoded labels: {label_encoder.classes_}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (26955, 21)\n",
+      "Val shape: (2995, 21)\n",
       "Test shape: (7488, 21)\n"
      ]
     }
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_train_full_scaled = scaler.fit_transform(X_train_full_combined)\n",
+    "X_test_scaled = scaler.transform(X_test_combined)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_train_full_scaled, y_train_full, test_size=0.1, random_state=42, stratify=y_train_full\n",
+    ")\n",
     "\n",
     "print(f\"Train shape: {X_train.shape}\")\n",
-    "print(f\"Test shape: {X_test.shape}\")\n"
+    "print(f\"Val shape: {X_val.shape}\")\n",
+    "print(f\"Test shape: {X_test_scaled.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +266,9 @@
     "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.5, patience=5)\n",
     "\n",
     "X_train_tensor = torch.FloatTensor(X_train).to(device)\n",
-    "X_test_tensor = torch.FloatTensor(X_test).to(device)\n",
+    "X_val_tensor = torch.FloatTensor(X_val).to(device)\n",
     "y_train_tensor = torch.LongTensor(y_train).to(device)\n",
+    "y_val_tensor = torch.LongTensor(y_val).to(device)\n",
     "y_test_tensor = torch.LongTensor(y_test).to(device)\n",
     "\n",
     "print(\"Model architecture:\")\n",
@@ -265,18 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Train Loss: 0.4143, Val Loss: 0.4180, Val Acc: 0.8006, LR: 0.001000\n",
-      "Epoch [20/100], Train Loss: 0.4124, Val Loss: 0.4176, Val Acc: 0.7853, LR: 0.001000\n",
-      "Epoch [30/100], Train Loss: 0.3744, Val Loss: 0.3867, Val Acc: 0.8158, LR: 0.000500\n",
-      "Epoch [40/100], Train Loss: 0.4076, Val Loss: 0.4212, Val Acc: 0.7859, LR: 0.000250\n",
-      "Early stopping at epoch 41\n",
+      "Epoch [10/100], Train Loss: 0.4126, Val Loss: 0.4105, Val Acc: 0.8013, LR: 0.001000\n",
+      "Epoch [20/100], Train Loss: 0.4051, Val Loss: 0.4123, Val Acc: 0.7943, LR: 0.001000\n",
+      "Early stopping at epoch 26\n",
       "Training complete.\n"
      ]
     }
@@ -304,10 +314,10 @@
     "        train_outputs = model(X_train_tensor)\n",
     "        train_loss_val = criterion(train_outputs, y_train_tensor).item()\n",
     "        \n",
-    "        val_outputs = model(X_test_tensor)\n",
-    "        val_loss = criterion(val_outputs, y_test_tensor).item()\n",
+    "        val_outputs = model(X_val_tensor)\n",
+    "        val_loss = criterion(val_outputs, y_val_tensor).item()\n",
     "        val_pred = torch.argmax(val_outputs, dim=1)\n",
-    "        val_acc = accuracy_score(y_test_tensor.cpu().numpy(), val_pred.cpu().numpy())\n",
+    "        val_acc = accuracy_score(y_val_tensor.cpu().numpy(), val_pred.cpu().numpy())\n",
     "    \n",
     "    scheduler.step(val_loss)\n",
     "    \n",
@@ -331,34 +341,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8225\n",
-      "Test Accuracy: 0.8170\n",
+      "Train Accuracy: 0.8031\n",
+      "Test Accuracy: 0.8053\n",
       "\n",
       "Classification Report (Test):\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         bot       0.72      0.74      0.73      2485\n",
-      "       human       0.87      0.85      0.86      5003\n",
+      "         bot       0.70      0.71      0.71      2485\n",
+      "       human       0.86      0.85      0.85      5003\n",
       "\n",
-      "    accuracy                           0.82      7488\n",
-      "   macro avg       0.79      0.80      0.80      7488\n",
-      "weighted avg       0.82      0.82      0.82      7488\n",
+      "    accuracy                           0.81      7488\n",
+      "   macro avg       0.78      0.78      0.78      7488\n",
+      "weighted avg       0.81      0.81      0.81      7488\n",
       "\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1843  642]\n",
-      " [ 728 4275]]\n"
+      "[[1774  711]\n",
+      " [ 747 4256]]\n"
      ]
     }
    ],
    "source": [
+    "X_test_tensor = torch.FloatTensor(X_test_scaled).to(device)\n",
+    "\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    train_outputs = model(X_train_tensor)\n",
