--- a/svm.ipynb
+++ b/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +85,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 10 text component features.\n",
-      "(37438, 27)\n"
+      "Train shape: (29950, 17)\n",
+      "Test shape: (7488, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
+    "feature_cols = [col for col in df.columns if col not in exclude_cols]\n",
+    "\n",
+    "X_numerical = df[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "y = df['account_type'].values\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "X_train_full, X_test_full, y_train, y_test = train_test_split(\n",
+    "    df, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded\n",
+    ")\n",
+    "\n",
+    "print(f\"Train shape: {X_train_full.shape}\")\n",
+    "print(f\"Test shape: {X_test_full.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train features shape: (29950, 21)\n",
+      "Test features shape: (7488, 21)\n",
+      "Encoded labels: ['bot' 'human']\n"
      ]
     }
    ],
@@ -101,58 +134,31 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "tfidf = TfidfVectorizer(max_features=500, stop_words='english')\n",
-    "tfidf_mat = tfidf.fit_transform(df['description'])\n",
+    "tfidf_train = tfidf.fit_transform(X_train_full['description'])\n",
+    "tfidf_test = tfidf.transform(X_test_full['description'])\n",
     "\n",
     "num_topic = 10\n",
     "svd = TruncatedSVD(n_components=num_topic, random_state=42)\n",
-    "svd_matrix = svd.fit_transform(tfidf_mat)\n",
+    "svd_train = svd.fit_transform(tfidf_train)\n",
+    "svd_test = svd.transform(tfidf_test)\n",
     "\n",
-    "svd_df = pd.DataFrame(\n",
-    "    svd_matrix, \n",
-    "    columns=[f\"topic_{i}\" for i in range(num_topic)]\n",
-    ")\n",
-    "\n",
-    "df_final = pd.concat([df.reset_index(drop=True), svd_df.reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "print(f\"Added {num_topic} text component features.\")\n",
-    "print(df_final.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features shape: (37438, 21)\n",
-      "Target distribution: human    25013\n",
-      "bot      12425\n",
-      "Name: count, dtype: int64\n",
-      "Encoded labels: ['bot' 'human']\n"
-     ]
-    }
-   ],
-   "source": [
     "exclude_cols = ['description', 'location', 'account_type', 'id', 'screen_name', 'lang']\n",
-    "feature_cols = [col for col in df_final.columns if col not in exclude_cols]\n",
+    "feature_cols = [col for col in X_train_full.columns if col not in exclude_cols]\n",
     "\n",
-    "X = df_final[feature_cols].select_dtypes(include=[np.number]).values\n",
-    "y = df_final['account_type'].values\n",
+    "X_train_numerical = X_train_full[feature_cols].select_dtypes(include=[np.number]).values\n",
+    "X_test_numerical = X_test_full[feature_cols].select_dtypes(include=[np.number]).values\n",
     "\n",
-    "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)\n",
+    "X_train = np.hstack([X_train_numerical, svd_train])\n",
+    "X_test = np.hstack([X_test_numerical, svd_test])\n",
     "\n",
-    "print(f\"Features shape: {X.shape}\")\n",
-    "print(f\"Target distribution: {pd.Series(y).value_counts()}\")\n",
+    "print(f\"Train features shape: {X_train.shape}\")\n",
+    "print(f\"Test features shape: {X_test.shape}\")\n",
     "print(f\"Encoded labels: {label_encoder.classes_}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -166,17 +172,16 @@
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded)\n",
-    "\n",
-    "print(f\"Train shape: {X_train.shape}\")\n",
-    "print(f\"Test shape: {X_test.shape}\")\n"
+    "print(f\"Train shape: {X_train_scaled.shape}\")\n",
+    "print(f\"Test shape: {X_test_scaled.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,61 +189,72 @@
      "output_type": "stream",
      "text": [
       "Training SVM model...\n",
-      "[LibSVM].............*...*.*\n",
-      "optimization finished, #iter = 16600\n",
-      "obj = -13713.131349, rho = 0.267991\n",
-      "nSV = 14768, nBSV = 13757\n",
-      "Total nSV = 14768\n",
+      "[LibSVM].....................................................................................................................................\n",
+      "Warning: using -h 0 may be faster\n",
+      "*.......................................................\n",
+      "Warning: using -h 0 may be faster\n",
+      "*...........................................................................................................\n",
+      "Warning: using -h 0 may be faster\n",
+      "*..........................................\n",
+      "Warning: using -h 0 may be faster\n",
+      "*................................................\n",
+      "Warning: using -h 0 may be faster\n",
+      "*............\n",
+      "Warning: using -h 0 may be faster\n",
+      "*\n",
+      "optimization finished, #iter = 394858\n",
+      "obj = -16304.565615, rho = 0.881748\n",
+      "nSV = 16326, nBSV = 16284\n",
+      "Total nSV = 16326\n",
       "Training complete.\n"
      ]
     }
    ],
    "source": [
     "svm = SVC(\n",
-    "    kernel='rbf',\n",
+    "    kernel='linear',\n",
     "    C=1.0,\n",
-    "    gamma='scale',\n",
     "    random_state=42,\n",
     "    verbose=True\n",
     ")\n",
     "\n",
     "print(\"Training SVM model...\")\n",
-    "svm.fit(X_train, y_train)\n",
+    "svm.fit(X_train_scaled, y_train)\n",
     "print(\"Training complete.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.7896\n",
-      "Test Accuracy: 0.7889\n",
+      "Train Accuracy: 0.7661\n",
+      "Test Accuracy: 0.7680\n",
       "\n",
       "Classification Report (Test):\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         bot       0.70      0.65      0.67      2485\n",
-      "       human       0.83      0.86      0.84      5003\n",
+      "         bot       0.64      0.70      0.67      2485\n",
+      "       human       0.84      0.80      0.82      5003\n",
       "\n",
-      "    accuracy                           0.79      7488\n",
-      "   macro avg       0.76      0.75      0.76      7488\n",
-      "weighted avg       0.79      0.79      0.79      7488\n",
+      "    accuracy                           0.77      7488\n",
+      "   macro avg       0.74      0.75      0.74      7488\n",
+      "weighted avg       0.77      0.77      0.77      7488\n",
       "\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1606  879]\n",
-      " [ 702 4301]]\n"
+      "[[1740  745]\n",
+      " [ 992 4011]]\n"
      ]
     }
    ],
    "source": [
-    "y_train_pred = svm.predict(X_train)\n",
-    "y_test_pred = svm.predict(X_test)\n",
+    "y_train_pred = svm.predict(X_train_scaled)\n",
+    "y_test_pred = svm.predict(X_test_scaled)\n",
     "\n",
     "train_acc = accuracy_score(y_train, y_train_pred)\n",
     "test_acc = accuracy_score(y_test, y_test_pred)\n",
