remove old comments

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -188,18 +188,56 @@
     }
    ],
    "source": [
-    "#etc = ExtraTreesClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
-    "#etc = RandomForestClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
-    "etc = AdaBoostClassifier(n_estimators=100, random_state=42)\n",
+    "rfc = RandomForestClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
     "\n",
     "\n",
-    "etc.fit(X_train, y_train)\n",
+    "rfc.fit(X_train, y_train)\n",
     "print(\"Training complete.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "followers_count: 0.1665\n",
+      "favourites_count: 0.1384\n",
+      "friends_count: 0.1051\n",
+      "statuses_count: 0.0885\n",
+      "average_tweets_per_day: 0.0826\n",
+      "account_age_days: 0.0791\n",
+      "Unnamed: 0: 0.0435\n",
+      "verified: 0.0393\n",
+      "topic_0: 0.0290\n",
+      "geo_enabled: 0.0241\n",
+      "topic_1: 0.0229\n",
+      "topic_8: 0.0228\n",
+      "topic_9: 0.0221\n",
+      "topic_2: 0.0218\n",
+      "topic_4: 0.0212\n",
+      "topic_7: 0.0205\n",
+      "topic_3: 0.0193\n",
+      "topic_5: 0.0191\n",
+      "topic_6: 0.0191\n",
+      "default_profile: 0.0131\n",
+      "default_profile_image: 0.0020\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print names of features with importances, sorted by importance\n",
+    "sorted_indices = np.argsort(rfc.feature_importances_)[::-1]\n",
+    "for i in sorted_indices:\n",
+    "    print(f\"{feature_cols[i]}: {rfc.feature_importances_[i]:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +265,8 @@
     }
    ],
    "source": [
-    "y_train_pred = etc.predict(X_train)\n",
-    "y_test_pred = etc.predict(X_test)\n",
+    "y_train_pred = rfc.predict(X_train)\n",
+    "y_test_pred = rfc.predict(X_test)\n",
     "\n",
     "train_acc = accuracy_score(y_train, y_train_pred)\n",
     "test_acc = accuracy_score(y_test, y_test_pred)\n",
