fixed commented out model

--- a/random_forest_fixed.ipynb
+++ b/random_forest_fixed.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,9 +193,7 @@
     }
    ],
    "source": [
-    "#etc = ExtraTreesClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
-    "#etc = RandomForestClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
-    "etc = AdaBoostClassifier(n_estimators=100, random_state=42)\n",
+    "etc = RandomForestClassifier(n_estimators=100, random_state=42, criterion='entropy')\n",
     "\n",
     "\n",
     "etc.fit(X_train_scaled, y_train)\n",
