--- a/random_forest_fixed.ipynb
+++ b/random_forest_fixed.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,23 +209,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.8290\n",
-      "Test Accuracy: 0.8316\n",
+      "Train Accuracy: 1.0000\n",
+      "Test Accuracy: 0.8817\n",
       "\n",
       "Classification Report (Test):\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         bot       0.76      0.71      0.74      2485\n",
-      "       human       0.86      0.89      0.88      5003\n",
+      "         bot       0.86      0.76      0.81      2485\n",
+      "       human       0.89      0.94      0.91      5003\n",
       "\n",
-      "    accuracy                           0.83      7488\n",
-      "   macro avg       0.81      0.80      0.81      7488\n",
-      "weighted avg       0.83      0.83      0.83      7488\n",
+      "    accuracy                           0.88      7488\n",
+      "   macro avg       0.88      0.85      0.86      7488\n",
+      "weighted avg       0.88      0.88      0.88      7488\n",
       "\n",
       "\n",
       "Confusion Matrix (Test):\n",
-      "[[1770  715]\n",
-      " [ 546 4457]]\n"
+      "[[1899  586]\n",
+      " [ 300 4703]]\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
